# ink-verifier-image

./: .dockerignore  .gitignore  Dockerfile  README.md  justfile  verify-contract.sh
.github/workflows/: build-ink-verifier-alpha-image.yml  build-ink-verifier-image.yml  create_latest.yml  create_latest_image.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs  pg.rs
config/: config.toml
docs/: SEC_NOTES.md  SOURCE_CODE_VERIFICATION_EXPLAINER.md
scripts/: build-contract  build-contract.sh  package-contract  package-contract.sh  verify-contract  verify-contract.sh
